<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_backup_warm"
        android:title="@string/backup_now"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_warm"
        android:title="@string/restore_backup"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_theme_warm"
        android:title="@string/choose_theme"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_password"
        android:icon="@drawable/ic_key_warm"
        android:title="@string/set_password"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_password"
        android:icon="@drawable/ic_key_warm"
        android:title="@string/change_password"
        android:visible="false"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lock_now"
        android:icon="@drawable/ic_lock_warm"
        android:title="@string/lock_now"
        android:visible="false"
        app:iconTint="@color/menu_icon_tint"
        app:showAsAction="never" />

</menu>
